fix: wrappung text in buttons

--- a/website/src/components/homepage-hero/index.module.scss
+++ b/website/src/components/homepage-hero/index.module.scss
@@ -29,10 +29,24 @@
     display: flex;
     flex-wrap: wrap;
     gap: var(--spacing-4);
+    @include breakpoints.from-small-to-medium-screen {
+      flex-wrap: unset;
+      flex-direction: column;
+      align-items: flex-start;
+      align-self: stretch;
+    }
 
     li {
+      @include breakpoints.from-small-to-medium-screen {
+        width: 100%;
+      }
+
       a {
         display: inline-block;
+        @include breakpoints.from-small-to-medium-screen {
+          display: block;
+          text-wrap: wrap;
+        }
       }
     }
   }
